--- a/views/index.html
+++ b/views/index.html
@@ -62,11 +62,11 @@
 
 
           <div class="title">
-            <h1>
+            <h2>
                 THE UTENSIL STORE
                 <i class="far fa-star"></i>
 
-              </h1>
+              </h2>
           </div>
           <div class="header-icon-container">
             <a href="/register">
@@ -135,7 +135,7 @@
         </div>
 
         <section class="menu">
-            <div class="title">
+            <div class="menu-title">
                 <h2>OUR MENU</h2>
                 <div class="underline"></div>
             </div>
