--- a/views/utensilapp.css
+++ b/views/utensilapp.css
@@ -45,7 +45,8 @@ header{
     position: relative;
     background-color:transparent;
     color: white;
-    border-left: white;
+    border:none;
+
   }
   .header-icon:hover{
     background-color: rgba(255, 255, 255, 0.336);
@@ -124,11 +125,11 @@ header{
     color:white;
     background-color: orange;
     width: 15px;
-    font-size: large;
+    font-size: 15px;
     border-radius: 18px;
     text-align: center;
-    top: 16px;
-    right: 15px;
+    top: 0.7rem;
+    right: 0px;
     font-weight: bold;
     display: none;
 
@@ -496,6 +497,10 @@ h4.count{
   }
   .sidebar-toggle{
     font-size: 1.5rem;
+  }
+  .photo{
+    height: 290px;
+    width: 100%;
   }
   
 }
