--- a/views/index.html
+++ b/views/index.html
@@ -6,9 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="utensilapp.css">
    <link rel="stylesheet" href="css/all.css">
-   <link rel="apple-touch-icon" sizes="180x180" href="./favicon_io/apple-touch-icon.png">
-<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
-<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
+<link rel="icon" type="image/JPG" sizes="16x16" href="./images/SJVO8212.JPG">
 <link rel="manifest" href="./favicon_io/site.webmanifest">
     <title>UTENSIL STORE</title>
 </head>
@@ -51,7 +49,7 @@
                     <div class="logout" style=" margin: 45px ; ">
                         <form action="/logout?_method=DELETE" method ="POST">
                             <button type="submit" 
-                             style="color: white; width: 100%; border: none; border-radius: 14px; height: 35px; background-color: red;">Log Out</button>
+                             style="color: white; width: 100%; border: none; border-radius: 14px; height: 35px; background-color: rgba(0, 0, 0, 0.527);">Log Out</button>
                           </form>
                     </div>
                 </div>
